# oz_03_main-002-BE

./: .black.cfg  .dockerignore  .gitignore  .isort.cfg  LICENCSE  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug.md  DocumentationImprovement.md  FeatureRequest.md  OtherTemplate.md  Question.md
.github/workflows/: code-convention.yml  deploy-aws.yml  pre-deploy-test.yml
DataTools/: get_ingredients_category_code.py  get_ingredients_data.py  get_preprocessing_recipe_data.py  get_recipe_data.py  pyproject.toml
Django/: .dockerignore  Dockerfile  docker-compose.yml  encryption_key.txt  pyproject.toml  requirements.txt  test.py
Django/app/: adapters.py  settings.py  urls.py
Django/app_user/: adapters.py  admin.py  apps.py  authentication.py  forms.py  models.py  serializers.py  urls.py  views.py
Django/app_user/migrations/: 0001_initial.py  0002_alter_app_user_id.py  0002_alter_app_user_options_alter_app_user_managers_and_more.py  0002_alter_app_user_user_id.py  0003_alter_app_user_options_alter_app_user_managers_and_more.py  0003_app_user_email_verification_token_and_more.py  0003_remove_app_user_password_hash.py  0004_app_user_email.py  0004_remove_app_user_name_alter_app_user_id_and_more.py  0005_alter_app_user_email.py
Django/app_user/templates/: complete_social_signup.html
Django/common/: decorators.py
Django/common_user/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
Django/ingredient/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Django/ingredient/migrations/: 0001_initial.py  0002_ingredient_created_by_ingredient_is_custom_and_more.py  0003_alter_ingredient_middle_alter_ingredient_sub.py
Django/management/management/commands/: import_recipes.py
Django/recipe/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Django/recipe/migrations/: 0001_initial.py  0002_recipe_created_at_recipe_updated_at_and_more.py  0003_alter_cookingattribute_main_ingre_and_more.py  0004_alter_cookingattribute_name_and_more.py  0005_alter_cookingattribute_unique_together.py  0006_alter_recipe_nick_name.py  0007_alter_cookingmainingre_name_alter_cookingmethod_name_and_more.py  0008_alter_recipe_nick_name.py
Django/refrigerator/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Django/refrigerator/migrations/: 0001_initial.py  0002_rename_is_activate_refrigerator_is_active_and_more.py
Django/user/: models.py
Scraping/:  encryption_db_info.py  Dockerfile  config.json.enc  config_test.json.enc  insert_cooking_category.py  insert_ingredient.py  insert_ingredient_category.py  pyproject.toml  test.py
crypto_files/: config.json.enc  config_test.json.enc  encryption_db_info.py
