[tool.poetry]
name = "selenium-scraping"
version = "0.1.0"
description = ""
authors = ["JoonHoSeong <joonho1366@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
ipykernel = "^6.29.5"
black = "^24.4.2"
isort = "^5.13.2"
psycopg2-binary = "^2.9.9"
cryptography = "^42.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
